# explainable-recommender-fairness-lab

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-checks.yml
configs/: synthetic_lab.yaml
data/: README.md
docs/: methodology.md  report_template.md  responsible_recommender_policy.md  synthetic_lab.md
matlab/: plot_recommender_metrics.m
notebooks/: 01_synthetic_recommender_fairness_lab.ipynb
scripts/: run_synthetic_recommender_lab.py
src/recfair/: __init__.py  audit.py  config.py  explanations.py  fairness.py  metrics.py  recommenders.py  reporting.py  synthetic.py  visualization.py
tests/: test_audit.py  test_metrics.py  test_pipeline.py  test_recommenders.py  test_synthetic.py
